sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: not found: value length
for( i <- 0 to length-1){
               ^AlgBubbleSort1:12: error: not found: value temp
temp = tab(i)
^AlgBubbleSort1:13: error: not found: value tab
tab(i)=tab(minpos)
^AlgBubbleSort1:14: error: not found: value tab
tab(minpos)=temp
^